--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
 .DS_Store
 *.xcuserstate
-*.xcuserstate
+Road Capture/Road Capture.xcodeproj/xcuserdata/
+Road Capture/Road Capture.xcodeproj/project.xcworkspace/xcuserdata/Breakpoints_v2.xcbkptlist
