--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 *.xcuserstate
 Road Capture/Road Capture.xcodeproj/xcuserdata/
 Road Capture/Road Capture.xcodeproj/project.xcworkspace/xcuserdata/Breakpoints_v2.xcbkptlist
+Road Capture/Road Capture.xcodeproj/project.xcworkspace/xcuserdata/aaronsletten.xcuserdatad/UserInterfaceState.xcuserstate
