--- a/Road Capture/Podfile
+++ b/Road Capture/Podfile
@@ -4,6 +4,7 @@ platform :ios, '9.0'
 target 'Road Capture' do
   use_frameworks!
 pod 'Alamofire'
+pod 'SwiftyJSON'
 pod 'CameraManager', '~> 4.3'
 pod 'SwiftLint'
 
