--- a/Road Capture/Podfile
+++ b/Road Capture/Podfile
@@ -7,6 +7,7 @@ pod 'Alamofire'
 pod 'SwiftyJSON'
 pod 'CameraManager', '~> 4.3'
 pod 'SwiftLint'
+pod 'SwiftyJSON', '~> 4.0'
 
   # Pods for Road Capture
 
