Upload in background

--- a/Road Capture/Road Capture/Info.plist
+++ b/Road Capture/Road Capture/Info.plist
@@ -42,6 +42,8 @@
 	<string>Used to track distanced traveled</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Used to track distanced traveled</string>
+	<key>UIBackgroundModes</key>
+	<array/>
 	<key>UIFileSharingEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
