--- a/Road Capture/Podfile
+++ b/Road Capture/Podfile
@@ -3,10 +3,11 @@ platform :ios, '9.0'
 
 target 'Road Capture' do
   use_frameworks!
-pod 'Alamofire',
-pod 'CameraManager', '~> 4.3'
-pod 'SwiftLint',
-pod 'SwiftyJSON', '~> 4.0'
+pod 'Alamofire'
+pod 'ReachabilitySwift'
+#pod 'CameraManager', '~> 4.3'
+#pod 'SwiftLint',
+#pod 'SwiftyJSON', '~> 4.0'
 
   # Pods for Road Capture
 
