--- a/Road Capture/.swiftlint.yml
+++ b/Road Capture/.swiftlint.yml
@@ -2,6 +2,10 @@ disabled_rules: # rule identifiers to exclude from running
   - line_length
   - trailing_whitespace
   - function_body_length
+  - function_parameter_count
+  - identifier_name
+  - colon
+  - cyclomatic_complexity
 opt_in_rules: # some rules are only opt-in
 included: # paths to include during linting. `--path` is ignored if present.
   - Road Capture
